kubernetes/components/knative/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  labels:
    app: analytics-for-spotify
    app.kubernetes.io/instance: analytics-for-spotify_analytics-for-spotify
  name: analytics-for-spotify
  namespace: analytics-for-spotify
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/maxScale: "3"
        autoscaling.knative.dev/minScale: "2"
        autoscaling.knative.dev/target: "100"
        networking.knative.dev/httpOption: redirected
        serving.knative.openshift.io/disableRoute: "true"
        enable.version-checker.io/analytics-for-spotify: "false"
        queue.sidecar.serving.knative.dev/cpu-resource-request: "5m"
        queue.sidecar.serving.knative.dev/cpu-resource-limit: "200m"
        queue.sidecar.serving.knative.dev/memory-resource-request: "12Mi"
        queue.sidecar.serving.knative.dev/memory-resource-limit: "36Mi"
    spec:
      containerConcurrency: 0
      containers:
        - env:
            - name: DATABASE
              valueFrom:
                secretKeyRef:
                  key: DATABASE
                  name: env
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  key: DB_HOST
                  name: env
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: env
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: DB_USER
                  name: env
          image: registry.arthurvardevanyan.com/apps/analytics-for-spotify:<VERSION>
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /analytics/health/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 1
          name: analytics-for-spotify
          ports:
            - containerPort: 8080
              name: http1
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /analytics/health/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 350m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      enableServiceLinks: false
      initContainers:
        - command:
            - /bin/bash
            - -c
            - |
              cd /home/www/analytics-for-spotify/
              source .venv/bin/activate
              python3 /home/www/analytics-for-spotify/setup.py
          env:
            - name: MIGRATIONS
              value: "true"
            - name: CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: CLIENT_ID
                  name: env
            - name: CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: CLIENT_SECRET
                  name: env
            - name: DATABASE
              valueFrom:
                secretKeyRef:
                  key: DATABASE
                  name: env
            - name: DB_HOST
              valueFrom:
                secretKeyRef:
                  key: DB_HOST
                  name: env
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_PASSWORD
                  name: env
            - name: REDIRECT_URL
              valueFrom:
                secretKeyRef:
                  key: REDIRECT_URL
                  name: env
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: DB_USER
                  name: env
          image: registry.arthurvardevanyan.com/apps/analytics-for-spotify:<VERSION>
          name: setup
          resources:
            limits:
              cpu: 350m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      timeoutSeconds: 30
